<resources>
    <string name="app_name">Android Base Datos</string>
    <string name="action_settings">Settings</string>
    <string name="snom">Nombre:</string>
    <string name="sid">ID:</string>
    <string name="ins">Alta</string>
    <string name="cons">Lista</string>
    <string name="del">Borrar</string>
    <string name="Updatn">Actualizar nombre</string>
    <string name="Updati">Actualizar id</string>
</resources>