<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/xll1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/xtvI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sid" />

    <EditText
        android:id="@+id/xetI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number" />

    <TextView
        android:id="@+id/xtvN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/snom" />

    <EditText
        android:id="@+id/xetN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"/>

    <Button
        android:id="@+id/xbnA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ins" />

    <Button
        android:id="@+id/xbnL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cons" />

    <Button
        android:id="@+id/xbnB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/del" />

    <Button
        android:id="@+id/xbnCN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Updatn" />

    <Button
        android:id="@+id/xbnCI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Updati" />

    <TextView
        android:id="@+id/xtvL"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="" />

</LinearLayout>